# Double-Pendulum-Simulation

./: .gitignore  Ball.cpp  CMakeLists.txt  CMakePresets.json  DoublePendulum.cpp  DoublePendulumODE.cpp  Double_Pendulum_ODE.cpp  Lab.cpp  Pendulum.cpp  README.md  RigidBody.cpp  Rod.cpp  app  glad.c  main.cpp
.cph/: .glad.c_17a64d828b4a521abe5464442a1cb268.prob
app.dSYM/Contents/Resources/DWARF/: app
app.dSYM/Contents/Resources/Relocations/aarch64/: app.yml
dependencies/include/: GLFW.textClipping  ball.h  double_pendulum.h  lab.h  ode.h  pendulum.h  rigidbody.h  rod.h  shader.h
dependencies/include/glad/: glad.h
shaders/: fragment.txt  vertex.txt
templates/: earth_revolution.cpp  help.cpp  two_colored_diamond.cpp
